tests/ui/comparison/src/zero_offset.inline.stderr
error: offset calculation on zero-sized value
  --> tests/ui/comparison/src/zero_offset.rs:11:19
   |
LL |         let n = m.offset(0);
   |                   ^^^^^^^^^
   |
   = note: `()` is a zero-sized type, offsetting a pointer to it will always yield the same address
   = note: `#[deny(rpl::zst_offset)]` on by default

error: offset calculation on zero-sized value
  --> tests/ui/comparison/src/zero_offset.rs:15:19
   |
LL |         let n = m.wrapping_add(0);
   |                   ^^^^^^^^^^^^^^^
   |
   = note: `()` is a zero-sized type, offsetting a pointer to it will always yield the same address

error: offset calculation on zero-sized value
  --> tests/ui/comparison/src/zero_offset.rs:34:17
   |
LL |         let n = offset(m, 0);
   |                 ^^^^^^^^^^^^
   |
   = note: `()` is a zero-sized type, offsetting a pointer to it will always yield the same address

error: offset calculation on zero-sized value
  --> tests/ui/comparison/src/zero_offset.rs:38:17
   |
LL |         let n = wrapping_add(m, 0);
   |                 ^^^^^^^^^^^^^^^^^^
   |
   = note: `()` is a zero-sized type, offsetting a pointer to it will always yield the same address

error: aborting due to 4 previous errors

